<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".review.AddReviewFragment">

  <data>
    <import type="android.view.View" />
    <import type="androidx.core.content.ContextCompat" />
    <variable
      name="addReviewViewModel"
      type="com.carkzis.android.silenus.review.AddReviewViewModel" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/add_bar_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:autoSizeTextType="uniform"
      android:text="@string/rate_an_establishment"
      android:textAlignment="center"
      android:textSize="34sp"
      app:layout_constraintBottom_toTopOf="@+id/tableLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
      android:id="@+id/tableLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/add_bar_text">

      <TableRow
        android:id="@+id/name_bar_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/name_bar_text"
          android:layout_width="match_parent"
          android:autoSizeTextType="uniform"
          android:text="@string/name_bar_text"
          android:textAlignment="center"
          android:textSize="20sp" />

        <EditText
          android:id="@+id/name_bar_edittext"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="name_bar"
          android:singleLine="true"
          android:text="@={addReviewViewModel.barName}"
          android:textAlignment="center" />

      </TableRow>

      <TableRow
        android:id="@+id/rating_bar_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
          android:id="@+id/rating_bar_text"
          android:layout_width="match_parent"
          android:layout_gravity="center"
          android:text="@string/rating_bar_text"
          android:textAlignment="center"
          android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
          android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="1">

          <RatingBar
            android:id="@+id/add_rev_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:numStars="5"
            android:rating="@={addReviewViewModel.rating}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

      </TableRow>

      <TableRow
        android:id="@+id/location_bar_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/location_bar_text"
          android:layout_width="match_parent"
          android:autoSizeTextType="uniform"
          android:text="@string/location_bar_text"
          android:textAlignment="center"
          android:textSize="20sp" />

        <EditText
          android:id="@+id/location_bar_edittext"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:layout_weight="1"
          android:textAlignment="center"
          android:cursorVisible="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:text="@={addReviewViewModel.location}"
          android:autofillHints="name_bar" />

      </TableRow>

    </TableLayout>

    <TextView
      android:id="@+id/description_bar_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:autoSizeTextType="uniform"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:layout_weight="1.0"
      android:text="@string/description_bar_text"
      android:textAlignment="center"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/description_bar_edittext"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <EditText
      android:id="@+id/description_bar_edittext"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/description_border"
      android:ems="10"
      android:gravity="start|top"
      android:inputType="textMultiLine"
      android:maxLength="255"
      android:text="@={addReviewViewModel.description}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/description_bar_text" />


  </androidx.constraintlayout.widget.ConstraintLayout>


  </ScrollView>


</layout>